# rwdraw

./: Cargo.toml  LICENSE
src/: main.rs  user.rs
src/img/: mod.rs
src/native/: geometry.rs  mod.rs  model.rs  renderer.rs  texture.rs
src/rw/: atomic.rs  basic.rs  clump.rs  frame.rs  geometry.rs  light.rs  material.rs  mod.rs  prims.rs  section.rs  texture.rs
src/shader/: gta3_prelit_tex1.fs.glsl  gta3_prelit_tex1.vs.glsl
