[package]
name = "rwdraw"
version = "0.1.0"
authors = ["Denilson M. Amorim <dma_2012@hotmail.com>"]

[dependencies]
byteorder = "*"
bitflags = "*"
itertools = "0.3"
cgmath = "*"
clock_ticks = "*"

[dependencies.glium]
# version = "*"
# path = "../../forks/glium"
git = "https://github.com/tomaka/glium"
features = ["cgmath"]
default-features = true
